--- a/routing/components/Register/register.html
+++ b/routing/components/Register/register.html
@@ -167,7 +167,7 @@
         </tr>
     </table>
     <br>
-    <button class="formbutton" style="margin-left: 30%" ng-click="rgCtrl.register()" ng-disabled="!form.$valid">Register</button>
+    <button class="formbutton" ng-click="rgCtrl.register()" ng-disabled="!form.$valid">Register</button>
     <span ng-bind="rgCtrl.register.content"></span>
 </form>
 
