--- a/routing/components/Favorites/favorites.html
+++ b/routing/components/Favorites/favorites.html
@@ -12,7 +12,7 @@
                 </span>
                 <a ng-click="fvrtlCtrl.rankAndReview(poi.name)"><img class="review_img" ng-src="../../routing/resources/img/review.png"/></a>
                 <br> 
-                <a ng-click="fvrtlCtrl.singlePOI(poi.name)"><img class="pois_click" ng-style="{'height': '110px','width': '150px', 'border-radius': '10px'}" ng-src="../../tokens{{poi.poi_img}}"></a>
+                <a ng-click="fvrtlCtrl.singlePOI(poi.name)"><img class="pois_click" ng-style="{'height': '100px','width': '150px', 'border-radius': '10px'}" ng-src="../../tokens{{poi.poi_img}}"></a>
                 <br>
                 <span ng-show="fvrtlCtrl.sortMode"><input ng-click="fvrtlCtrl.insert(poi.name)" type = "checkbox">Select point</input></span>
                 </td>
@@ -37,56 +37,88 @@
 <span ng-show="!fvrtlCtrl.noPoisForUser && fvrtlCtrl.sortMode">
 
 <h3>Order of POIS</h3>
-    <table id="newOrder" ng-repeat="x in fvrtlCtrl.order">
+<table id="newOrder" ng-repeat="x in fvrtlCtrl.order">
         <tr >
           <td>{{ x }}</td>
         </tr>
-    </table>
+</table>
 
-    <button ng-click="fvrtlCtrl.saveNewOrder()" ng-disabled="fvrtlCtrl.disableNewOrder">Save new order</button>
-    <span ng-bind="fvrtlCtrl.saveNewOrder.content"></span>
+<button ng-click="fvrtlCtrl.saveNewOrder()" ng-disabled="fvrtlCtrl.disableNewOrder">Save new order</button>
+<span ng-bind="fvrtlCtrl.saveNewOrder.content"></span>
 </span>
 
+
+
 <form name="form" novalidate>
-        <h1>Filter by category:</h1>
-        <select ng-model="fvrtlCtrl.chosenCategory" name="category" required>
-                <option value="" disabled selected>Select your category</option>
-                <option ng-repeat="category in fvrtlCtrl.categories" value="{{category.value}}">{{category.value}}</option>
-        </select>
-        <br />
-        <div ng-show="form.$submitted || form.category.$touched">
-        <div ng-show="form.category.$error.required">Please choose category.</div>
-        </div><br>
-        <button style="width:250px" ng-click="fvrtlCtrl.filterByCategory()" ng-disabled="!form.$valid">Filter/Unfilter by category</button>
-        <span ng-bind="fvrtlCtrl.sort.content"></span>
-        </form>
-        
-        <div ng-show="fvrtlCtrl.filter">
-                <table>
-                        <tr>
-                            <td ng-repeat="p in fvrtlCtrl.poisToShow">
-                                    <a ng-click="fvrtlCtrl.singlePOI(p.name)"><img class="pois_click" ng-style="{'height': '60px','width': '100px', 'border-radius': '10px'}" ng-src="../../tokens{{p.poi_img}}"></a>
-                                    <a ng-click="fvrtlCtrl.singlePOI(p.name)"><span class="pois_click" ng-bind="p.name"></span></a>
-                                    <span ng-show="!fvrtlCtrl.guest">
-                                            <span ng-show="p.poi_saved=='full_heart'" class="tooltip">
-                                                <a ng-click="fvrtlCtrl.removePOI(p.name)"><img class="favs" ng-style="{'height': '20px','width': '20px'}" ng-src="../../routing/resources/img/{{p.poi_saved}}.png"/></a>
-                                                <span class="tooltiptext">Remove from favorites</span>
-                                            </span>
-                                            <span ng-show="p.poi_saved=='empty_heart'" class="tooltip">
-                                                <a ng-click="fvrtlCtrl.savePOI(p.name)"><img class="favs" ng-style="{'height': '20px','width': '20px'}" ng-src="../../routing/resources/img/{{p.poi_saved}}.png"/></a>
-                                                <span class="tooltiptext">Add to favorites</span>
-                                            </span>
-                                            <span class="tooltip">
-                                                <a ng-click="fvrtlCtrl.rankAndReview(p.name)"><img class="review_img" ng-src="../../routing/resources/img/review.png"/></a>
-                                            <span class="tooltiptext">Rank/Review</span>
-                                            </span>
-                                    </span>
-                            </td>
-                        </tr>
-                </table>
-        </div>
-        
-        <br>
+    <h1>Filter by category:</h1>
+    <select ng-model="fvrtlCtrl.chosenCategory" name="category" required>
+            <option value="" disabled selected>Select your category</option>
+            <option ng-repeat="category in fvrtlCtrl.categories" value="{{category.value}}">{{category.value}}</option>
+    </select>
+    <br />
+    <div ng-show="form.$submitted || form.category.$touched">
+    <div ng-show="form.category.$error.required">Please choose category.</div>
+    </div><br>
+    <button ng-click="fvrtlCtrl.filterByCategory()" ng-disabled="!form.$valid">Filter/Unfilter by category</button>
+    </form>
+    
+    <div ng-show="fvrtlCtrl.filter">
+            <table>
+                    <tr>
+                        <td ng-repeat="p in fvrtlCtrl.poisToShow">
+                                <a ng-click="fvrtlCtrl.singlePOI(p.name)"><img class="pois_click" ng-style="{'height': '50px','width': '100px', 'border-radius': '10px'}" ng-src="../../tokens{{p.poi_img}}"></a>
+                                <a ng-click="fvrtlCtrl.singlePOI(p.name)"><span class="pois_click" ng-bind="p.name"></span></a>
+                                <span ng-show="p.poi_saved=='full_heart'" class="tooltip">
+                                    <a ng-click="fvrtlCtrl.removePOI(p.name)"><img class="favs" ng-style="{'height': '20px','width': '20px'}" ng-src="../../routing/resources/img/{{p.poi_saved}}.png"/></a>
+                                    <span class="tooltiptext">Remove from favorites</span>
+                                </span>
+                                <span ng-show="p.poi_saved=='empty_heart'" class="tooltip">
+                                    <a ng-click="fvrtlCtrl.savePOI(p.name)"><img class="favs" ng-style="{'height': '20px','width': '20px'}" ng-src="../../routing/resources/img/{{p.poi_saved}}.png"/></a>
+                                    <span class="tooltiptext">Add to favorites</span>
+                                </span>
+                                <span class="tooltip">
+                                    <a ng-click="fvrtlCtrl.rankAndReview(p.name)"><img class="review_img" ng-src="../../routing/resources/img/review.png"/></a>
+                                <span class="tooltiptext">Rank/Review</span>
+                                </span>
+                        </td>
+                    </tr>
+            </table>
+    </div>
+    
+    <br>
+    
+    <br>
+    <h1>Sort by rank:</h1>
+    <button ng-click="fvrtlCtrl.sortByRank()">Sort/Unsort by rank</button><br>
+    
+    <div ng-show="fvrtlCtrl.rankSort">
+            <table>
+                    <tr>
+                        <td style="padding:20px" ng-repeat="po in fvrtlCtrl.poisArray">
+                                <a ng-click="fvrtlCtrl.singlePOI(po.name)"><img class="pois_click" ng-style="{'height': '50px','width': '100px', 'border-radius': '10px'}" ng-src="../../tokens{{po.poi_img}}"></a>
+                                <a ng-click="fvrtlCtrl.singlePOI(po.name)"><span class="pois_click" ng-bind="po.name"></span></a>
+                                <span ng-show="pp.poi_saved=='full_heart'" class="tooltip">
+                                    <a ng-click="fvrtlCtrl.removePOI(po.name)"><img class="favs" ng-style="{'height': '20px','width': '20px'}" ng-src="../../routing/resources/img/{{po.poi_saved}}.png"/></a>
+                                    <span class="tooltiptext">Remove from favorites</span>
+                                </span>
+                                <span ng-show="po.poi_saved=='empty_heart'" class="tooltip">
+                                    <a ng-click="fvrtlCtrl.savePOI(po.name)"><img class="favs" ng-style="{'height': '20px','width': '20px'}" ng-src="../../routing/resources/img/{{po.poi_saved}}.png"/></a>
+                                    <span class="tooltiptext">Add to favorites</span>
+                                </span>
+                                <span class="tooltip">
+                                    <a ng-click="fvrtlCtrl.rankAndReview(po.name)"><img class="review_img" ng-src="../../routing/resources/img/review.png"/></a>
+                                <span class="tooltiptext">Rank/Review</span>
+                                </span>
+                        </td>
+                    </tr>
+            </table>
+    </div>
+
+    
+
+
+
+
 
 
 
