--- a/routing/components/About/about.html
+++ b/routing/components/About/about.html
@@ -2,3 +2,8 @@
 <center>Chances are Casablanca isn’t going to meet romantic Hollywood expectations. <br>But, as the largest Moroccan city, it’s the place to get to know the culture, history and people of Morocco. <br>It’s also a great, centrally-located base for adventuring down the coast.</center>
 <br>
 <img id="shivuk_img" ng-src="../../routing/resources/img/Shivuk.jpg"/>
+<br>
+<br>
+<a class="networkref" href="https://www.youtube.com/watch?v=1IZkUdr4-Y0" target="_blank">
+    <img id="youtube" alt="Youtube" src="../../../routing/resources/img/youtube.png" />
+</a>
