--- a/routing/components/ForgotPassword/forgotPassword.html
+++ b/routing/components/ForgotPassword/forgotPassword.html
@@ -30,6 +30,6 @@
      </div>
 
      <br>
-     <button style="margin-left: 30%" ng-click="frgtCtrl.getPassword()" ng-disabled="!form2.$valid">Get my password</button>
+     <button style="margin-left: 30%; width:180px" ng-click="frgtCtrl.getPassword()" ng-disabled="!form2.$valid">Get my password</button>
      <span ng-bind="frgtCtrl.getPassword.content"></span>
      <br>
