--- a/routing/components/Favorites/favorites.html
+++ b/routing/components/Favorites/favorites.html
@@ -97,7 +97,7 @@
                         <td style="padding:20px" ng-repeat="po in fvrtlCtrl.poisArray">
                                 <a ng-click="fvrtlCtrl.singlePOI(po.name)"><img class="pois_click" ng-style="{'height': '50px','width': '100px', 'border-radius': '10px'}" ng-src="../../tokens{{po.poi_img}}"></a>
                                 <a ng-click="fvrtlCtrl.singlePOI(po.name)"><span class="pois_click" ng-bind="po.name"></span></a>
-                                <span ng-show="pp.poi_saved=='full_heart'" class="tooltip">
+                                <span ng-show="po.poi_saved=='full_heart'" class="tooltip">
                                     <a ng-click="fvrtlCtrl.removePOI(po.name)"><img class="favs" ng-style="{'height': '20px','width': '20px'}" ng-src="../../routing/resources/img/{{po.poi_saved}}.png"/></a>
                                     <span class="tooltiptext">Remove from favorites</span>
                                 </span>
