--- a/routing/resources/style.css
+++ b/routing/resources/style.css
@@ -47,24 +47,6 @@ body{
 
 }
 
-button{
-/*	background-color: rgba(100,150,255,0.6);
-	height:25px;
-	width: 100px;
-	border-radius:10%;*/
-}
-
-/*#footer {
-    z-index: -1;
-    opacity: 0.7
-    bottom: 0;
-    height: 60px;
-    width: 100%;
-    color: white;
-    font-size: 18px;
-    text-align: center;
-}*/
-
 /**** REGISTER ****/
 button{
   line-height: 1.5;
@@ -113,42 +95,32 @@ button:hover{
     z-index:-1;
     position: relative;
     bottom: 0;
-    display:flex;
     height: 60px;
     width: 100%;
     color: #0366d6;
     font-size: 18px;
     text-align: center;
+    margin:0 auto;
   }
-#reservedRights{
-    vertical-align: -35px;
 
-}
-.footer_class{
-    display: inline-block;
-    width:33%;
-}
 #footer_pic{
     height:60px;
     width:60px;
 }
-#footer ul{
-    list-style-type:none
+
+.networkref{
+    margin:0 auto;
+    display: inline-block;
+    margin-left: 45%;
+    margin-top: 30px;
+    
 }
-#footer li {
-    float:left;
-}
-.footer_links{
-    width:60px;
-    height:60px;
-    margin-right:30px;
-}
-.footer_links:hover{
+.networkref:hover{
     cursor: pointer;
+
 }
-.footerpics{
-    width:50px;
-    height:50px;
+#network:hover{
+    cursor: pointer;
 }
 /**** GUEST ****/
 #guest_table{
